--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,14 @@
         <button id="sendBtn" disabled>Send</button>
       </div>
     </div>
+    <button onclick="testPush()">Test Push</button>
+<script>
+function testPush() {
+  Notification.requestPermission().then(perm => {
+    if (perm === 'granted') new Notification('Test!');
+  });
+}
+</script>
   </div>
 
   <!-- EXTERNAL SCRIPTS (NO INLINE SCRIPTS) -->
