--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VS Chat App</title>
+  <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#007bff">
+
   <link rel="icon" href="/icon-192x192.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
